unpackaged/main/default/objects/Database__c/Database__c.object-meta.xml
<CustomObject>
    <label>Account Database</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Account Database Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Database</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>