unpackaged/main/default/objects/Database__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Database</relationshipLabel>
    <relationshipName>Account_Database</relationshipName>
    <type>Lookup</type>
</CustomField>