unpackaged/main/default/objects/Database__c/fields/Account_Website_Complete__c.field-meta.xml
<CustomField>
    <fullName>Account_Website_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Website Complete?</label>
    <type>Checkbox</type>
</CustomField>