unpackaged/main/default/objects/Database__c/fields/Ad_campaign_for_you_in_24_to_48_hours__c.field-meta.xml
<CustomField>
    <fullName>Ad_campaign_for_you_in_24_to_48_hours__c</fullName>
    <inlineHelpText>Our team of experts will personalize and launch your ad campaign for you in 24 to 48 hours.</inlineHelpText>
    <label>Ad campaign for you in 24 to 48 hours.</label>
    <type>TextArea</type>
</CustomField>