unpackaged/main/default/objects/Database__c/fields/Agent_Bio_Status__c.field-meta.xml
<CustomField>
    <fullName>Agent_Bio_Status__c</fullName>
    <inlineHelpText>Status of Agent Bio</inlineHelpText>
    <label>Agent Bio Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Claimed by Client</fullName>
            </value>
            <value>
                <fullName>Questionnaire Pending</fullName>
            </value>
            <value>
                <fullName>Questionnaire Received</fullName>
            </value>
            <value>
                <fullName>Submitted to Content</fullName>
            </value>
            <value>
                <fullName>Creation in Progress</fullName>
            </value>
            <value>
                <fullName>Pending Client Review</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Posted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>