unpackaged/main/default/objects/Database__c/fields/Agent_Bios_Claimed__c.field-meta.xml
<CustomField>
    <fullName>Agent_Bios_Claimed__c</fullName>
    <label>Agent Bios Claimed</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>