unpackaged/main/default/objects/Database__c/fields/Agree_to_launch_ads__c.field-meta.xml
<CustomField>
    <fullName>Agree_to_launch_ads__c</fullName>
    <inlineHelpText>Our team will launch your paid ads within three weeks after your website is live, once AI Lead Nurture is activated.</inlineHelpText>
    <label>Agree to launch ads?</label>
    <type>TextArea</type>
</CustomField>