unpackaged/main/default/objects/Database__c/fields/All_Contacts_Up_To_Date__c.field-meta.xml
<CustomField>
    <fullName>All_Contacts_Up_To_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Contacts Up To Date</label>
    <type>Checkbox</type>
</CustomField>