unpackaged/main/default/objects/Database__c/fields/All_services_correct__c.field-meta.xml
<CustomField>
    <fullName>All_services_correct__c</fullName>
    <inlineHelpText>Does the client have the correct services in the correct statuses.</inlineHelpText>
    <label>All services correct?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>