unpackaged/main/default/objects/Database__c/fields/Any_established_brand_colors_Fonts__c.field-meta.xml
<CustomField>
    <fullName>Any_established_brand_colors_Fonts__c</fullName>
    <label>Any established brand colors? Fonts?</label>
    <type>TextArea</type>
</CustomField>