unpackaged/main/default/objects/Database__c/fields/Any_notes_we_should_know__c.field-meta.xml
<CustomField>
    <fullName>Any_notes_we_should_know__c</fullName>
    <label>Any notes we should know?</label>
    <type>TextArea</type>
</CustomField>