unpackaged/main/default/objects/Database__c/fields/Any_SMS_automation_for_your_lead__c.field-meta.xml
<CustomField>
    <fullName>Any_SMS_automation_for_your_lead__c</fullName>
    <inlineHelpText>Are you currently using any SMS automation for your lead nurture?</inlineHelpText>
    <label>Any SMS automation for your lead</label>
    <type>TextArea</type>
</CustomField>