unpackaged/main/default/objects/Database__c/fields/Are_there_any_areas_of_expertise_you_spe__c.field-meta.xml
<CustomField>
    <fullName>Are_there_any_areas_of_expertise_you_spe__c</fullName>
    <inlineHelpText>Are there any areas of expertise you specialize in?</inlineHelpText>
    <label>Areas of expertise</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>