unpackaged/main/default/objects/Database__c/fields/Assessment_Name__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Name__c</fullName>
    <inlineHelpText>Nickname for assessment</inlineHelpText>
    <label>Assessment Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>