unpackaged/main/default/objects/Database__c/fields/Assets_for_Initial_Draft__c.field-meta.xml
<CustomField>
    <fullName>Assets_for_Initial_Draft__c</fullName>
    <inlineHelpText>If you answered yes to the previous question, what assets from your live site should we incorporate in the initial draft of your new, Luxury Presence site?</inlineHelpText>
    <label>Assets for Initial Draft</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>