unpackaged/main/default/objects/Database__c/fields/Average_Listing_Price__c.field-meta.xml
<CustomField>
    <fullName>Average_Listing_Price__c</fullName>
    <inlineHelpText>What is the average listing price of your properties?</inlineHelpText>
    <label>Average Listing Price</label>
    <length>255</length>
    <type>Text</type>
</CustomField>