unpackaged/main/default/objects/Database__c/fields/Backen__c.field-meta.xml
<CustomField>
    <fullName>Backen__c</fullName>
    <inlineHelpText>Do you want to use our back-end dashboard to make changes to the website?</inlineHelpText>
    <label>Back-end Dashboard</label>
    <length>255</length>
    <type>Text</type>
</CustomField>