unpackaged/main/default/objects/Database__c/fields/Blogs_Per_Year__c.field-meta.xml
<CustomField>
    <fullName>Blogs_Per_Year__c</fullName>
    <inlineHelpText># of posts a client should receive per year. This should NOT be in per quarter format.</inlineHelpText>
    <label>Blogs Per Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>