unpackaged/main/default/objects/Database__c/fields/Blogs_Update_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Blogs_Update_to_Date__c</fullName>
    <inlineHelpText>Are all the existing blog service schedules up to date?</inlineHelpText>
    <label>Blogs Correct to Date?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No, missing monday.com data</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>