unpackaged/main/default/objects/Database__c/fields/Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Brand_Name__c</fullName>
    <inlineHelpText>Q: Let&#39;s get started. Who should we brand this website for?</inlineHelpText>
    <label>Brand Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>