unpackaged/main/default/objects/Database__c/fields/Business_Address__c.field-meta.xml
<CustomField>
    <fullName>Business_Address__c</fullName>
    <label>Business Address</label>
    <type>TextArea</type>
</CustomField>