unpackaged/main/default/objects/Database__c/fields/Business_Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Entity_Type__c</fullName>
    <inlineHelpText>Choose your business structure: Sole Proprietorship, Partnership, Corporation, S Corp, or LLC.</inlineHelpText>
    <label>Business Entity Type</label>
    <type>TextArea</type>
</CustomField>