unpackaged/main/default/objects/Database__c/fields/Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Name__c</fullName>
    <label>Business Name</label>
    <type>TextArea</type>
</CustomField>