unpackaged/main/default/objects/Database__c/fields/Business_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Business_Phone_Number__c</fullName>
    <label>Business Phone Number</label>
    <type>Phone</type>
</CustomField>