unpackaged/main/default/objects/Database__c/fields/Campaign_Currency__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Currency__c</fullName>
    <label>Campaign Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>CAD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>