unpackaged/main/default/objects/Database__c/fields/Color_Hex_Codes__c.field-meta.xml
<CustomField>
    <fullName>Color_Hex_Codes__c</fullName>
    <inlineHelpText>If yes, please list the brand colors you wish to use on your new Luxury Presence site below:</inlineHelpText>
    <label>Brand Colors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>