unpackaged/main/default/objects/Database__c/fields/Color_Palettes__c.field-meta.xml
<CustomField>
    <fullName>Color_Palettes__c</fullName>
    <inlineHelpText>Which of the below color palettes best reflects your brand?</inlineHelpText>
    <label>Color Palettes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>