unpackaged/main/default/objects/Database__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Salesforce Contract</inlineHelpText>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Account Database</relationshipLabel>
    <relationshipName>Account_Database</relationshipName>
    <type>Lookup</type>
</CustomField>