unpackaged/main/default/objects/Database__c/fields/Copied_Assets__c.field-meta.xml
<CustomField>
    <fullName>Copied_Assets__c</fullName>
    <inlineHelpText>If you answered yes to the previous question which assets from your live site should we incorporate in the new draft of your Luxury Presence website?</inlineHelpText>
    <label>Copied Assets</label>
    <type>TextArea</type>
</CustomField>