unpackaged/main/default/objects/Database__c/fields/Copywriting_Up_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Copywriting_Up_to_Date__c</fullName>
    <label>Copywriting Up to Date?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Missing monday.com data</fullName>
            </value>
            <value>
                <fullName>No schedules needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>