unpackaged/main/default/objects/Database__c/fields/Current_Color_Palette__c.field-meta.xml
<CustomField>
    <fullName>Current_Color_Palette__c</fullName>
    <inlineHelpText>Do you currently have a brand color palette?</inlineHelpText>
    <label>Current Color Palette</label>
    <length>255</length>
    <type>Text</type>
</CustomField>