unpackaged/main/default/objects/Database__c/fields/Do_you_have_a_Facebook_business_page__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_a_Facebook_business_page__c</fullName>
    <label>Do you have a Facebook business page?</label>
    <type>TextArea</type>
</CustomField>