unpackaged/main/default/objects/Database__c/fields/Email_Addresses_to_Receive_Reports__c.field-meta.xml
<CustomField>
    <fullName>Email_Addresses_to_Receive_Reports__c</fullName>
    <description>Email Addresses to Receive Reports</description>
    <label>Email Addresses to Receive Reports</label>
    <type>TextArea</type>
</CustomField>