unpackaged/main/default/objects/Database__c/fields/Existing_Domain_Site__c.field-meta.xml
<CustomField>
    <fullName>Existing_Domain_Site__c</fullName>
    <inlineHelpText>Do you have an existing, live site? If so, please paste the domain below.</inlineHelpText>
    <label>Existing Domain Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>