unpackaged/main/default/objects/Database__c/fields/Existing_Live_Site__c.field-meta.xml
<CustomField>
    <fullName>Existing_Live_Site__c</fullName>
    <label>Existing Live Site</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>