unpackaged/main/default/objects/Database__c/fields/Font_style__c.field-meta.xml
<CustomField>
    <fullName>Font_style__c</fullName>
    <label>Font style?</label>
    <type>TextArea</type>
</CustomField>