unpackaged/main/default/objects/Database__c/fields/GBP_Post__c.field-meta.xml
<CustomField>
    <fullName>GBP_Post__c</fullName>
    <label>GBP Post Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Access</fullName>
            </value>
            <value>
                <fullName>Post up-to-date</fullName>
            </value>
            <value>
                <fullName>GBP Post Behind</fullName>
            </value>
            <value>
                <fullName>Service Schedules Incorrect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>