unpackaged/main/default/objects/Database__c/fields/GBP_Status__c.field-meta.xml
<CustomField>
    <fullName>GBP_Status__c</fullName>
    <inlineHelpText>This should be the status of the clients GBP to date, regardless of SF service status.</inlineHelpText>
    <label>GBP Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Verification in progress</fullName>
            </value>
            <value>
                <fullName>No Access</fullName>
            </value>
            <value>
                <fullName>Duplicate Profile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>