unpackaged/main/default/objects/Database__c/fields/Have_you_done_any_marketing_in_the_past__c.field-meta.xml
<CustomField>
    <fullName>Have_you_done_any_marketing_in_the_past__c</fullName>
    <inlineHelpText>Have you done any marketing in the past? What have you tried? Please share what worked and what didn&#39;t.</inlineHelpText>
    <label>Have you done any marketing in the past?</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>