unpackaged/main/default/objects/Database__c/fields/How_would_you_describe_your_brand_voice__c.field-meta.xml
<CustomField>
    <fullName>How_would_you_describe_your_brand_voice__c</fullName>
    <label>How would you describe your brand voice?</label>
    <type>TextArea</type>
</CustomField>