unpackaged/main/default/objects/Database__c/fields/Ideal_Customer__c.field-meta.xml
<CustomField>
    <fullName>Ideal_Customer__c</fullName>
    <label>Ideal Customer</label>
    <type>TextArea</type>
</CustomField>