unpackaged/main/default/objects/Database__c/fields/Imagery_Website_Focus__c.field-meta.xml
<CustomField>
    <fullName>Imagery_Website_Focus__c</fullName>
    <inlineHelpText>Which of the below imagery do you want to focus on throughout the website? You may select more than one.</inlineHelpText>
    <label>Imagery Website Focus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>