unpackaged/main/default/objects/Database__c/fields/Include_your_email_and_password_for_the__c.field-meta.xml
<CustomField>
    <fullName>Include_your_email_and_password_for_the__c</fullName>
    <description>Include your email and password for the Facebook Business Page below</description>
    <label>Email and password for facebook</label>
    <type>TextArea</type>
</CustomField>