unpackaged/main/default/objects/Database__c/fields/Information__c.field-meta.xml
<CustomField>
    <fullName>Information__c</fullName>
    <inlineHelpText>Credentials: Username &amp; Password
Quiz Link
Other</inlineHelpText>
    <label>Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>