unpackaged/main/default/objects/Database__c/fields/Inspiration_Site__c.field-meta.xml
<CustomField>
    <fullName>Inspiration_Site__c</fullName>
    <inlineHelpText>Is there a specific site you want us to draw inspiration from?</inlineHelpText>
    <label>Inspiration Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>