unpackaged/main/default/objects/Database__c/fields/Is_your_business_more_buyer_or_seller_fo__c.field-meta.xml
<CustomField>
    <fullName>Is_your_business_more_buyer_or_seller_fo__c</fullName>
    <inlineHelpText>Is your business more buyer or seller-focused? What would you like to be</inlineHelpText>
    <label>More buyer or seller-focused</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>