unpackaged/main/default/objects/Database__c/fields/KWA_Status__c.field-meta.xml
<CustomField>
    <fullName>KWA_Status__c</fullName>
    <label>KWA Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Needs Refresh</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>