unpackaged/main/default/objects/Database__c/fields/Light_theme_or_Dark_theme__c.field-meta.xml
<CustomField>
    <fullName>Light_theme_or_Dark_theme__c</fullName>
    <label>Light theme or Dark theme?</label>
    <type>TextArea</type>
</CustomField>