unpackaged/main/default/objects/Database__c/fields/Location_1__c.field-meta.xml
<CustomField>
    <fullName>Location_1__c</fullName>
    <label>Location # 1</label>
    <length>200</length>
    <type>Text</type>
</CustomField>