unpackaged/main/default/objects/Database__c/fields/Location_2__c.field-meta.xml
<CustomField>
    <fullName>Location_2__c</fullName>
    <label>Location # 2</label>
    <length>200</length>
    <type>Text</type>
</CustomField>