unpackaged/main/default/objects/Database__c/fields/Location_3__c.field-meta.xml
<CustomField>
    <fullName>Location_3__c</fullName>
    <label>Location #3</label>
    <length>200</length>
    <type>Text</type>
</CustomField>