unpackaged/main/default/objects/Database__c/fields/Logo_Upload__c.field-meta.xml
<CustomField>
    <fullName>Logo_Upload__c</fullName>
    <label>Logo Upload</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>