unpackaged/main/default/objects/Database__c/fields/Main_Goals__c.field-meta.xml
<CustomField>
    <fullName>Main_Goals__c</fullName>
    <label>Main Goals</label>
    <length>290</length>
    <type>LongTextArea</type>
</CustomField>