unpackaged/main/default/objects/Database__c/fields/Max_Price_Range__c.field-meta.xml
<CustomField>
    <fullName>Max_Price_Range__c</fullName>
    <label>Max Price Range</label>
    <length>20</length>
    <type>Text</type>
</CustomField>