unpackaged/main/default/objects/Database__c/fields/Min_Price_Range__c.field-meta.xml
<CustomField>
    <fullName>Min_Price_Range__c</fullName>
    <label>Min Price Range</label>
    <length>20</length>
    <type>Text</type>
</CustomField>