unpackaged/main/default/objects/Database__c/fields/Monthly_ad_spend_level__c.field-meta.xml
<CustomField>
    <fullName>Monthly_ad_spend_level__c</fullName>
    <label>Monthly ad spend level</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>