unpackaged/main/default/objects/Database__c/fields/Monthly_Marketing_Fee__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Marketing_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monthly Marketing Fee Correct?</label>
    <type>Checkbox</type>
</CustomField>