unpackaged/main/default/objects/Database__c/fields/Monthly_Subscription_Fee_Correct__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Subscription_Fee_Correct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monthly Subscription Fee Correct?</label>
    <type>Checkbox</type>
</CustomField>