unpackaged/main/default/objects/Database__c/fields/Most_Important_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Most_Important_Outcome__c</fullName>
    <inlineHelpText>Which outcome is most important to you?</inlineHelpText>
    <label>Most Important Outcome</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>