unpackaged/main/default/objects/Database__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Name</label>
    <length>55</length>
    <type>Text</type>
</CustomField>