unpackaged/main/default/objects/Database__c/fields/Neighborhood_Guides_Claimed__c.field-meta.xml
<CustomField>
    <fullName>Neighborhood_Guides_Claimed__c</fullName>
    <inlineHelpText>How many neighborhood guides has the client used?</inlineHelpText>
    <label>Neighborhood Guides Claimed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>