unpackaged/main/default/objects/Database__c/fields/New_Plan__c.field-meta.xml
<CustomField>
    <fullName>New_Plan__c</fullName>
    <label>New Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Launch+</fullName>
            </value>
            <value>
                <fullName>Brand+</fullName>
            </value>
            <value>
                <fullName>Growth+</fullName>
            </value>
            <value>
                <fullName>Premium+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>