unpackaged/main/default/objects/Database__c/fields/No_Reason__c.field-meta.xml
<CustomField>
    <fullName>No_Reason__c</fullName>
    <label>No Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>All_services_correct__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Upgraded</fullName>
            </value>
            <value>
                <fullName>Client Downgraded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>