unpackaged/main/default/objects/Database__c/fields/Open_notes__c.field-meta.xml
<CustomField>
    <fullName>Open_notes__c</fullName>
    <label>Open notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>