unpackaged/main/default/objects/Database__c/fields/Payment_Term_Correct__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term_Correct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Term Correct?</label>
    <type>Checkbox</type>
</CustomField>