unpackaged/main/default/objects/Database__c/fields/Physical_Address_Updated__c.field-meta.xml
<CustomField>
    <fullName>Physical_Address_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Physical Address Updated</label>
    <type>Checkbox</type>
</CustomField>