unpackaged/main/default/objects/Database__c/fields/Please_confirm_your_Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Please_confirm_your_Brand_Name__c</fullName>
    <label>Please confirm your Brand Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>