unpackaged/main/default/objects/Database__c/fields/Please_link_their_new_plan__c.field-meta.xml
<CustomField>
    <fullName>Please_link_their_new_plan__c</fullName>
    <label>Please link their new &#39;+&#39; plan</label>
    <type>Url</type>
</CustomField>