unpackaged/main/default/objects/Database__c/fields/Please_select_your_12_blog_topics_below__c.field-meta.xml
<CustomField>
    <fullName>Please_select_your_12_blog_topics_below__c</fullName>
    <label>Please select your 12 blog topics below</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>The Benefits of Working With an Experienced [Location] Real Estate [Agent/Team]</fullName>
            </value>
            <value>
                <fullName>The Benefits of Buying a New Construction Home in [Location]</fullName>
            </value>
            <value>
                <fullName>10 Tips for First-Time Homebuyers in [Location]</fullName>
            </value>
            <value>
                <fullName>What To Know Before Selling A [Location] Home</fullName>
            </value>
            <value>
                <fullName>How to Stage Your Home for a Quick Sale in [Location]</fullName>
            </value>
            <value>
                <fullName>Home Improvement Projects That Add Value in [Location]</fullName>
            </value>
            <value>
                <fullName>A Comprehensive Guide to Home Financing in [Location]</fullName>
            </value>
            <value>
                <fullName># Top Factors that Influence Home Resell Value in [Location]</fullName>
            </value>
            <value>
                <fullName>What to Know About Buying a Condo in [Location]</fullName>
            </value>
            <value>
                <fullName>How to Downsize Effectively in [Location]</fullName>
            </value>
            <value>
                <fullName>How to Own Your Dream Home in [Location]: A Step-by-Step Guide</fullName>
            </value>
            <value>
                <fullName>Discovering [Location&#39;s] Best Things to Do</fullName>
            </value>
            <value>
                <fullName>Top 5 Outdoor Activities to do in [Location]: A Local&#39;s Guide</fullName>
            </value>
            <value>
                <fullName>The Best Parks and Recreation Areas in [Location]</fullName>
            </value>
            <value>
                <fullName>The Best Day Trips from [Location]</fullName>
            </value>
            <value>
                <fullName>10 Simple Tips for Enhancing Space in Your [Location] Home</fullName>
            </value>
            <value>
                <fullName>How to Choose the Perfect Color Palette for Your [Location] Home</fullName>
            </value>
            <value>
                <fullName>Luxury Home Design Trends in [Location]</fullName>
            </value>
            <value>
                <fullName># [Location] Condo Upgrade Ideas</fullName>
            </value>
            <value>
                <fullName>The Best ROI Improvements for Homes in [Location]</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>