unpackaged/main/default/objects/Database__c/fields/Prefer_Phone_Number_Code__c.field-meta.xml
<CustomField>
    <fullName>Prefer_Phone_Number_Code__c</fullName>
    <inlineHelpText>Which area code do you prefer for the phone number that the AI text will use?</inlineHelpText>
    <label>Prefer Phone Number Code</label>
    <type>TextArea</type>
</CustomField>