unpackaged/main/default/objects/Database__c/fields/Price_Range__c.field-meta.xml
<CustomField>
    <fullName>Price_Range__c</fullName>
    <inlineHelpText>Under $300,000
$300,000 to $500,000
$500,000 to $750,000
$750,000 to $1,000,000
Over $1,000,000</inlineHelpText>
    <label>Price Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>