unpackaged/main/default/objects/Database__c/fields/Primary_Contact_Correct__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Correct__c</fullName>
    <label>Primary Contact Correct?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>