unpackaged/main/default/objects/Database__c/fields/Primary_Property_Types__c.field-meta.xml
<CustomField>
    <fullName>Primary_Property_Types__c</fullName>
    <inlineHelpText>What property types do you primarily work with?</inlineHelpText>
    <label>Primary Property Types</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>