unpackaged/main/default/objects/Database__c/fields/Priority_Location__c.field-meta.xml
<CustomField>
    <fullName>Priority_Location__c</fullName>
    <label>Priority Location</label>
    <length>271</length>
    <type>LongTextArea</type>
</CustomField>