unpackaged/main/default/objects/Database__c/fields/Problem_solved_B_What_are_some_of_the__c.field-meta.xml
<CustomField>
    <fullName>Problem_solved_B_What_are_some_of_the__c</fullName>
    <inlineHelpText>Problem solved (B): What are some of the challenges buyers are facing in your area and how are you solving it?</inlineHelpText>
    <label>Challenges buyers are facing in</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>