unpackaged/main/default/objects/Database__c/fields/Problem_solved_S_What_are_some_of_the__c.field-meta.xml
<CustomField>
    <fullName>Problem_solved_S_What_are_some_of_the__c</fullName>
    <inlineHelpText>Problem solved (S): What are some of the challenges sellers are facing in your area and how are you solving it?</inlineHelpText>
    <label>challenges sellers are facing in</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>