unpackaged/main/default/objects/Database__c/fields/Quarter__c.field-meta.xml
<CustomField>
    <fullName>Quarter__c</fullName>
    <inlineHelpText>Quarter in which the assessment was completed.</inlineHelpText>
    <label>Quarter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Q4&#39;23</fullName>
            </value>
            <value>
                <fullName>Q1&#39;24</fullName>
            </value>
            <value>
                <fullName>Q2&#39;24</fullName>
            </value>
            <value>
                <fullName>Q3&#39;24</fullName>
            </value>
            <value>
                <fullName>Q4&#39;24</fullName>
            </value>
            <value>
                <fullName>Q1&#39;25</fullName>
            </value>
            <value>
                <fullName>Q2&#39;25</fullName>
            </value>
            <value>
                <fullName>Q3&#39;25</fullName>
            </value>
            <value>
                <fullName>Q4&#39;25</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>