unpackaged/main/default/objects/Database__c/fields/Question_11_link__c.field-meta.xml
<CustomField>
    <fullName>Question_11_link__c</fullName>
    <formula>&#39;https://recordit.co/0Co3xvLmZH&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Question 11 link</label>
    <type>Text</type>
</CustomField>