unpackaged/main/default/objects/Database__c/fields/Question_4_Link__c.field-meta.xml
<CustomField>
    <fullName>Question_4_Link__c</fullName>
    <formula>&#39;https://recordit.co/cscM4izqDa&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Question 4 Link</label>
    <type>Text</type>
</CustomField>