unpackaged/main/default/objects/Database__c/fields/Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Date__c</fullName>
    <inlineHelpText>Date client&#39;s subscription renews</inlineHelpText>
    <label>Renewal Date</label>
    <type>DateTime</type>
</CustomField>