unpackaged/main/default/objects/Database__c/fields/Secondary_Desired_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Desired_Outcome__c</fullName>
    <inlineHelpText>What is your secondary desired outcome?</inlineHelpText>
    <label>Secondary Desired Outcome</label>
    <type>TextArea</type>
</CustomField>