unpackaged/main/default/objects/Database__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service</label>
    <referenceTo>Service__c</referenceTo>
    <relationshipLabel>Account Database</relationshipLabel>
    <relationshipName>Account_Database</relationshipName>
    <type>Lookup</type>
</CustomField>